# geoapi

./: .gitignore  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  manage.py  pyproject.toml
config/: .env.template
docker/django/: Dockerfile
fixtures/users/: users.json
scripts/: wait_for_db.sh
src/: api_urls.py  asgi.py  swagger.py  urls.py  wsgi.py
src/apps/geoapi/: apps.py  exceptions.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
src/apps/geoapi/entities/: ip_address.py
src/apps/geoapi/migrations/: 0001_initial.py  0002_ipaddress_user.py
src/apps/user/: urls.py
src/settings/: __init__.py  common.py  dev.py  drf.py  geoapi.py  prod.py  swagger.py
tests/test_apps/test_geoapi/: test_services.py  test_views.py
